# photo-review-app

./: LICENSE  README.md  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: library.dart
lib/state/: library_state.dart
lib/views/: burst_list.dart  burst_player.dart  export_screen.dart  preprocess_dashboard.dart  settings_dialog.dart  singles_grid.dart  singles_loupe.dart  source_setup.dart  workspace.dart
lib/widgets/: photo_thumb.dart
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/examples/: benchstill.rs  exifdump.rs  rendercheck.rs  renderiso.rs
rust/src/: burst_ops.rs  frb_generated.rs  lib.rs
rust/src/api/: library.rs
rust/src/db/: mod.rs  queries.rs  schema.sql
rust/src/export/: mod.rs
rust/src/indexer/: exif.rs  grouping.rs  hash.rs  mod.rs  pairing.rs  walk.rs
rust/src/preprocess/: arw.rs  mod.rs  stills.rs  video.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_photo_review_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_photo_review_app.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
