[package]
name = "rust_lib_photo_review_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
walkdir = "2"
rayon = "1"
crossbeam-channel = "0.5"
kamadak-exif = "0.6"
rusqlite = { version = "0.37", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
image = "0.25"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
